# rust-sqlx-minimal

./: .env  Cargo.toml  README.md
src/: main.rs
