[package]
name = "dao-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }

[dependencies.sqlx]
version = "0.7.4"
features = [
  "runtime-tokio-native-tls",
  "macros",
  "postgres",
]
